LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13156
          REGRESSION (r19621): Pasting breakable content where wrapped line is too long to fit in a textarea fails to draw a horizontal scrollbar

        * fast/text/midword-break-after-breakable-char-expected.checksum: Added.
        * fast/text/midword-break-after-breakable-char-expected.png: Added.
        * fast/text/midword-break-after-breakable-char-expected.txt: Added.
        * fast/text/midword-break-after-breakable-char.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13156
          REGRESSION (r19621): Pasting breakable content where wrapped line is too long to fit in a textarea fails to draw a horizontal scrollbar

        Test: fast/text/midword-break-after-breakable-char.html

        Breaking in the middle of the word
        is allowed only if no breaking opportunity between words has occurred yet. The
        first position on the line should not be considered "between words" even if
        it is a breaking opportunity.

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::findNextLineBreak): Changed according to the above. Also
        cleaned up a couple of lines.



Canonical link: https://commits.webkit.org/17219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20479 268f45cc-cd09-0410-ab3c-d52691b4dbfc